--- a/package.json
+++ b/package.json
@@ -6,16 +6,13 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.5.1",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
-    "spotify-web-api-node": "^5.0.2",
-    "web-vitals": "^1.1.1"
+    "spotify-web-api-node": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
