--- a/srv/package.json
+++ b/srv/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "srv.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon srv.js",
+    "prod": "node srv.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "spotify-web-api-node": "^5.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
